--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,3 +2,5 @@
 @import "./partials/mixins";
 @import "./partials/globals";
 @import "./partials/title";
+@import "./partials/card";
+@import "./partials/search";
