--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -211,8 +211,11 @@ li {
           align-items: left;
   min-height: 100vh;
   width: 50%;
-  padding: 100px;
+  padding: 50px;
+  padding-right: 0;
   text-align: left;
+  -webkit-transform: translateX(-150px);
+          transform: translateX(-150px);
 }
 
 .dogApp .search-button {
@@ -265,6 +268,17 @@ li {
   }
 }
 
+.dogApp header {
+  position: relative;
+}
+
+.dogApp svg {
+  position: absolute;
+  bottom: 0;
+  right: -160px;
+  height: 90%;
+}
+
 .card-set {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -302,6 +316,10 @@ li {
 .card .breed {
   font-size: 20px;
   font-weight: 700;
+}
+
+.card img {
+  width: 100%;
 }
 
 .search-card-container {
