--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -193,6 +193,21 @@ li {
           align-items: center;
 }
 
+.dogApp h1 {
+  font-size: 4rem;
+  margin: 10px 0;
+}
+
+.dogApp i {
+  font-size: 2rem;
+}
+
+.dogApp i:hover {
+  color: #ffad33;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
 .dogApp .title {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -206,16 +221,11 @@ li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: left;
-      -ms-flex-align: left;
-          align-items: left;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   min-height: 100vh;
-  width: 50%;
-  padding: 50px;
-  padding-right: 0;
-  text-align: left;
-  -webkit-transform: translateX(-150px);
-          transform: translateX(-150px);
+  padding: 75px;
 }
 
 .dogApp .search-button {
@@ -269,14 +279,30 @@ li {
 }
 
 .dogApp header {
-  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  width: 95vw;
+  overflow: hidden;
 }
 
 .dogApp svg {
-  position: absolute;
-  bottom: 0;
-  right: -160px;
-  height: 90%;
+  min-width: 40%;
+  max-width: 50%;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 
 .card-set {
@@ -300,7 +326,7 @@ li {
 .card {
   padding: 20px;
   border: 3px solid black;
-  width: 200px;
+  width: 250px;
   min-height: 200px;
   margin: 15px;
 }
@@ -313,6 +339,12 @@ li {
   padding: 5px 10px;
 }
 
+.card button:hover {
+  background: #ffad33;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
 .card .breed {
   font-size: 20px;
   font-weight: 700;
@@ -320,6 +352,9 @@ li {
 
 .card img {
   width: 100%;
+  max-height: 180px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .search-card-container {
@@ -353,13 +388,29 @@ li {
 .search input[type="text"] {
   display: block;
   margin: 0 auto;
-  max-width: 600px;
+  width: 100%;
   padding: 3px 5px;
   border: 3px solid black;
-  background-color: lightcyan;
+  background-color: rgba(255, 173, 51, 0.1);
 }
 
 .search input[type="text"]:focus {
-  background-color: lightcyan;
+  background-color: rgba(255, 173, 51, 0.3);
+}
+
+.search .full-input {
+  margin: 0 auto;
+  width: 200px;
+}
+
+.search .full-input .autocomplete {
+  width: 100%;
+  border: 3px solid black;
+  border-top: none;
+}
+
+.search .full-input .autocomplete-items {
+  width: 100%;
+  background: rgba(255, 173, 51, 0.3);
 }
 /*# sourceMappingURL=app.css.map */
