--- a/src/styles/partials/_card.scss
+++ b/src/styles/partials/_card.scss
@@ -5,7 +5,7 @@
 .card {
     padding: 20px;
     border: 3px solid black;
-    width: 200px;
+    width: 250px;
     min-height: 200px;
     margin: 15px;
     button {
@@ -14,6 +14,10 @@
         background: black;
         color: white;
         padding: 5px 10px;
+        &:hover {
+            background: rgb(255, 173, 51);
+            transition: 0.2s;
+        }
     }
 
     .breed {
@@ -23,5 +27,8 @@
 
     img {
         width: 100%;
+        max-height: 180px;
+        object-fit: cover;
     }
+    
 }
