--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -395,7 +395,7 @@ li {
 }
 
 .search input[type="text"]:focus {
-  background-color: rgba(255, 173, 51, 0.3);
+  border: 3px solid #ffad33;
 }
 
 .search .full-input {
@@ -405,12 +405,16 @@ li {
 
 .search .full-input .autocomplete {
   width: 100%;
-  border: 3px solid black;
+  border: 3px solid rgba(255, 173, 51, 0.3);
   border-top: none;
 }
 
 .search .full-input .autocomplete-items {
   width: 100%;
   background: rgba(255, 173, 51, 0.3);
+}
+
+.search .full-input .autocomplete-items:hover {
+  background: rgba(255, 173, 51, 0.6);
 }
 /*# sourceMappingURL=app.css.map */
