--- a/src/styles/partials/_search.scss
+++ b/src/styles/partials/_search.scss
@@ -17,7 +17,7 @@
         border: 3px solid black;
         background-color: rgba(255, 173, 51, 0.1);
         &:focus {
-            background-color: rgba(255, 173, 51, 0.3);
+            border: 3px solid rgba(255, 173, 51, 1);
         }
     }
    
@@ -28,12 +28,15 @@
         width: 200px;
         .autocomplete{
             width: 100%;
-            border: 3px solid black;
+            border: 3px solid rgba(255, 173, 51, 0.3);
             border-top: none; 
         }
         .autocomplete-items{
             width: 100%;
             background: rgba(255, 173, 51, 0.3);
+            &:hover {
+                background: rgba(255, 173, 51, 0.6)
+            }
         }
     }
 }
