--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -323,6 +323,11 @@ li {
           align-items: top;
 }
 
+.card-container .warning-msg {
+  margin-top: 10px;
+  text-align: center;
+}
+
 .card {
   padding: 20px;
   border: 3px solid black;
@@ -415,6 +420,10 @@ li {
 }
 
 .search .full-input .autocomplete-items:hover {
+  background: rgba(255, 173, 51, 0.6);
+}
+
+.search .full-input .highlighted {
   background: rgba(255, 173, 51, 0.6);
 }
 /*# sourceMappingURL=app.css.map */
