--- a/src/styles/partials/_search.scss
+++ b/src/styles/partials/_search.scss
@@ -38,5 +38,8 @@
                 background: rgba(255, 173, 51, 0.6)
             }
         }
+        .highlighted {
+            background: rgba(255, 173, 51, 0.6);
+        }
     }
 }
