--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -198,6 +198,13 @@ li {
   margin: 10px 0;
 }
 
+@media (max-width: 960px) {
+  .dogApp h1 {
+    font-size: 3rem;
+    margin: 0;
+  }
+}
+
 .dogApp i {
   font-size: 2rem;
 }
@@ -226,6 +233,30 @@ li {
           align-items: flex-start;
   min-height: 100vh;
   padding: 75px;
+}
+
+@media (max-width: 1024px) {
+  .dogApp .title {
+    padding-right: 0px;
+  }
+}
+
+@media (max-width: 825px) {
+  .dogApp .title {
+    min-height: 40vh;
+  }
+}
+
+@media (max-width: 825px) {
+  .dogApp .title {
+    padding-right: 75px;
+  }
+}
+
+@media (max-width: 428px) {
+  .dogApp .title {
+    padding: 20px;
+  }
 }
 
 .dogApp .search-button {
@@ -298,11 +329,35 @@ li {
   overflow: hidden;
 }
 
+@media (max-width: 825px) {
+  .dogApp header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .dogApp svg {
   min-width: 40%;
-  max-width: 50%;
   -ms-flex-item-align: end;
       align-self: flex-end;
+}
+
+@media (max-width: 1024px) {
+  .dogApp svg {
+    min-width: 55%;
+  }
+}
+
+@media (max-width: 825px) {
+  .dogApp svg {
+    height: calc(60vh - 147px);
+    margin: 41px auto;
+  }
 }
 
 .card-set {
